<resources>
    <string name="app_name">LES CHŒURS D’ARTICHAUT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Les choeurs d\'artichaut</string>
    <string name="nav_header_subtitle">danslesyeuxdeloli@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_auteur">Auteur</string>
    <string name="action_version">Version</string>

    <string name="menu_home">Accueil</string>
    <string name="menu_gallery">Google Maps</string>
    <string name="menu_slideshow">Site Web</string>
    <string name="menu_quiz">Quizz</string>
    <string name="les_nouveaut_s">- Les nouveautés ! -</string>
    <string name="apr_s_quelques_mois_sur_la_br_che_adapei_th_l_ton_et_restos_du_c_ur_et_un_peu_plus_de_11_000_euros_revers_s_les_ch_urs_d_artichaut_vont_prendre_un_peu_de_repos_a_tr_s_bient_t_pour_de_nouvelles_aventures_solidairement_v_tre">Après quelques mois sur “la brêche” (ADAPEI- Théléton et Restos du Cœur) et un peu plus de 11 000 euros reversés… les Chœurs d’Artichaut vont prendre un peu de repos. A très bientôt pour de nouvelles aventures. Solidairement vôtre.</string>
    <string name="textview">TextView</string>
    <string name="bonjour_tous_et_meilleurs_v_ux_pour_l_ann_e_venir_voici_l_affiche_du_nouveau_spectacle_in_dit_100_pour_100_original_nous_esp_rons_de_tout_coeur_vous_retrouver_pour_notre_rendez_vous_annuel_au_profit_des_restos_du_c_ur_samedi_6_et_dimanche_7_f_vrier_prochains_salle_des_f_tes_de_villelongue_pour_obtenir_vos_places_permanence_des_ventes_de_billets_samedi_16_janvier_18h_au_point_jeunes_de_villelongue_nous_avons_h_te">Bonjour à tous et meilleurs vœux pour l’année à venir. Voici l’affiche du nouveau spectacle, inédit, 100 pour 100 original ! Nous espérons de tout coeur vous retrouver pour notre rendez-vous annuel au profit des Restos du Cœur Samedi 6 et Dimanche 7 février prochains (salle des fêtes de Villelongue) Pour obtenir vos places: permanence des ventes de billets samedi 16 janvier à 18h au Point Jeunes de Villelongue. Nous avons hâte!</string>
    <string name="todo">TODO</string>
    <string name="f_vrier_2016_a_bient_t">février 2016 - A bientôt!</string>
    <string name="d_cembre_2015_une_tr_s_bonne_ann_e">décembre 2015 - Une très bonne année!</string>
    <string name="f_vrier_2013_bilan_2012_2013">février 2013 - Bilan 2012/2013</string>
    <string name="apr_s_un_dernier_tour_de_piste">Après un dernier tour de piste le 16 février dernier, nous pouvons dresser un bilan très positif de l’année 2012 qui a vu l’association proposer un spectacle chant et danse sur 4 dates à guichet fermé. Les bénéfices reversés aux Restos du Coeur s’élèvent donc à 8500 euros puisque 1200 personnes ont assisté aux concerts.</string>
    <string name="l_occasion_de_remercier_de_tout">L’occasion de remercier de tout coeur tous les spectateurs de nos spectacles, nos amis les Alchemist et tous nos sponsors.</string>
    <string name="restez_en_contact_nous">Restez en contact, nous travaillons déjà au prochain projet…</string>
    <string name="qui_sommes_nous">- Qui sommes nous ? -</string>
    <string name="depuis_8_ans_maintenant">Depuis 8 ans maintenant, une quarantaine de jeunes personnes de notre village œuvrent pour venir en aide à des associations et causes diverses (Restos du Cœur – Julien veut grandir – Fondation Ferrasse pour les handicapés du rugby – Noël des enfants de l’hôpital de Perpignan etc…).</string>
    <string name="gr_ce_des_concerts">Grâce à des concerts, spectacles, création et production d’un single original (2007) puis d’un calendrier autour du thème du cinéma (2009), tournois sportifs…, nous avons pu collecter plusieurs dizaines de milliers d’euros que nous avons distribués aux associations citées ci-dessus entre autres. Tous les bénéfices de nos manifestations sont systématiquement reversés au profit des causes auxquelles nous apportons notre soutien.</string>
    <string name="nous_comptons_dans_nos_rangs_des_b_n_voles_aux_comp_tences_vari_es_chanteurs_musiciens_danseurs_infographiste_peintre_d_corateur_et_travaillons_en_partenariat_avec_un_studio_d_enregistrement_pour_la_musique_et_l_idem_pour_la_vid_o_toutes_ces_forces_vives_sont_sur_le_pont_pour_la_cr_ation_la_pr_paration_la_promotion_et_la_bonne_tenue_de_deux_trois_manifestations_par_an">Nous comptons dans nos rangs des bénévoles aux compétences variées: chanteurs, musiciens, danseurs, infographiste, peintre décorateur … et travaillons en partenariat avec un studio d’enregistrement pour la musique et l’IDEM pour la vidéo. Toutes ces forces vives sont sur le pont pour la création, la préparation, la promotion et la bonne tenue de deux à trois manifestations par an.</string>
    <string name="les_m_dias_locaux_ind">Les médias locaux (Indépendant et France Bleu Roussillon) et à certaines occasions nationaux (Midi Olympique, France 3, Canal + Sports), relaient régulièrement nos actions grâce au soutien (participation aux clips et aux enregistrements studio) de nos parrains parmi lesquels: D’autres personnalités nous témoignent également leur appui comme Jean Jacques Goldman qui a, par quatre courriers (dernier en date le 22 mai 2012), renouvelé ses encouragements à nos bénévoles.</string>
    <string name="michael_jones">Michael Jones nous a également donné un coup de pouce en acceptant une interview filmée sur le thème de l’action caritative en 2011.</string>
    <string name="nos_actions_se_poursuivent">Nos actions se poursuivent actuellement dans un partenariat privilégié avec les Restos du Cœur. Ce site est destiné à archiver la vie de l’association, à en présenter l’actualité, mais avant tout à remercier tous ceux qui nous apportent leur aide et leur soutien au quotidien (public, bénévoles, artistes, parrains, sponsors, médias etc…)</string>
    <string name="Question1">Année de création : 17-02-2006 - Il y a 15 ans</string>
    <string name="Question2">2016 : 11K€ reversés à Théléton et Restos du Cœur</string>
    <string name="Question3">Activité : Manifestations</string>
    <string name="Question4">Est-ce que LES CHOEURS D\'ARTICHAUT donne des leçons de musique et chant ?</string>
    <string name="Question5">27 mars 2021 : Concert donné au profit de l\'association \'\'\Dans les yeux de Loli\'\'</string>
    <string name="correct_answer">C\'est correct</string>
    <string name="wrong_answer">C\'est incorrect</string>
    <string name="correct"><b>Réponse correcte</b> \n
                           <b>%1$d</b> sur 5</string>
</resources>